# moxie-ai

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
configs/: api_example.toml  example.toml  pos_example.toml
configs/prompts/: business_analyst.toml
plugins/: README.md
plugins/template/: mod.rs.template
src/: main.rs
src/config/: client.rs  mod.rs  prompts.rs
src/conversation/: mod.rs
src/core/: chat.rs  memory.rs  mod.rs
src/plugins/: loader.rs  manifest.rs  mod.rs  traits.rs
src/plugins/api/: mod.rs
src/plugins/filesystem/: mod.rs
src/providers/: mod.rs  ollama.rs  openai_compat.rs
src/routes/: mod.rs
