[package]
name = "moxie-ai"
version = "0.1.0"
edition = "2021"
authors = ["John Nguyen"]
license = "MIT"
description = "Bold AI chatbot API for website integration - unified interface to Ollama, OpenAI, and Anthropic"
repository = "https://github.com/johnhnguyen97/moxie"
homepage = "https://github.com/johnhnguyen97/moxie"
readme = "README.md"
keywords = ["ai", "chatbot", "llm", "ollama", "api"]
categories = ["web-programming", "api-bindings"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for AI providers
reqwest = { version = "0.12", features = ["json", "stream"] }
async-stream = "0.3"
futures = "0.3"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1"

[dev-dependencies]
tokio-test = "0.4"
